# desafio-app

./: README.md  app.py  module.py  pyproject.toml
data/: dados_json.json
database/: conexao.py
services/: data_manager.py
