[tool.poetry]
name = "api-desafio"
version = "0.1.0"
description = ""
authors = ["Francisco-Cezar <franciscocezar.jr@outlook.com>"]
readme = "README.md"
packages = [{include = "api_desafio"}]

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^9.3.0"
flask = "^3.1.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
